[package]
name = "curv"
version = "0.7.0"
edition = "2018"
authors = ["Omer Shlomovits"]
license = "MIT"
description = "Curv contains an extremly simple interface to onboard new elliptic curves. Use this library for general purpose elliptic curve cryptography"
repository = "https://github.com/ZenGo-X/curv"

[lib]
crate-type = ["lib"]

[dependencies]
blake2b_simd = { version = "0.5.7", branch = "main", git = "https://github.com/sgx-test/blake2b_smid-sgx" }
cryptoxide = { branch = "0.3.3-sgx", git = "https://github.com/sgx-test/cryptoxide-sgx" }#path = "../../migration/cryptoxide"
curve25519-dalek = { version = "1.2.3", git = "https://github.com/sgx-test/curve25519-dalek-sgx" }#path = "../../migration/curve25519-dalek-1.2.6"
derivative = { version = "2.2", git = "https://github.com/sgx-test/rust-derivative" }
digest = { version = "0.8.1", git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx" }
ff-zeroize = { version = "0.6.3", features = ["mesalock_sgx","derive"], git = "https://github.com/sgx-test/ff-zeroize-sgx"}
funty = { version = "*", git = "https://github.com/sgx-test/funty-sgx" }
generic-array = { version = "0.14.4" }
hex = { version = "0.4", git = "https://github.com/mesalock-linux/rust-hex-sgx" }
hmac = { version = "0.7.1" , git = "https://github.com/sgx-test/hmac-sgx"} # ,path = "../../migration/hmac-0.7.1/hmac" tag = "hmac-v0.7.1",git = "https://github.com/RustCrypto/MACs" }
#merkle-sha3 = { version = "^0.1", git = "https://github.com/sgx-test/merkle-sha3-sgx" }
lazy_static = { version = "1.4.0", git = "https://github.com/sgx-test/lazy-static.rs" }
num-traits = { version = "0.2.14", default-features = false }
num-integer = { version = "0.1.44" , default-features = false}
pairing-plus = { version = "0.19", git = "https://github.com/sgx-test/pairing-plus-sgx" }
rand = { version = "0.7.3", git = "https://github.com/mesalock-linux/rand-sgx" }
ring-algorithm = { version = "0.2.3", branch = "0.2.3-sgx", git = "https://github.com/sgx-test/ring-algorithm-sgx" }
#rust-crypto = { version = "^0.2", git = "https://github.com/mesalock-linux/rust-crypto-sgx" }
serde = { version = "1.0", git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
serde_derive = { version = "1.0", git = "https://github.com/mesalock-linux/serde-sgx" }
sha2 = { version = "0.8.0", git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx" }
sha3 = { version = "0.8.2", git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx" }
zeroize = { version = "*", git = "https://github.com/sgx-test/ff-zeroize-sgx" }

rust-gmp = { git = "https://github.com/sgx-test/rust-gmp", branch = "sgx", version = "0.5", features = ["serde_support"], optional = true }
num-bigint = { git = "https://github.com/sgx-test/num-bigint-sgx", version = "0.4", features = ["serde"], optional = true , default-features = false }

sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

libsecp256k1 = { branch = "0.3.5-sgx", git = "https://github.com/sgx-test/libsecp256k1-sgx"}
#secp256k1 = { branch = "0.3.5-sgx", git = "https://github.com/sgx-test/libsecp256k1-sgx"}
p256 = { version = "0.5", features = ["ecdsa"], git = "https://github.com/sgx-test/p256-sgx" }#path = "../p256-sgx/p256"


[features]
default = ["gmp","mesalock_sgx"]
bigint = ["num-bigint"]
gmp = ["rust-gmp","rust-gmp-kzen"]
rust-gmp-kzen =[]
mesalock_sgx = ["sgx_tstd"]
bigint-sgx = ["mesalock_sgx","bigint"]