[package]
name = "curv"
version = "0.7.0"
edition = "2018"
authors = ["Omer Shlomovits"]
license = "MIT"
description = "Curv contains an extremly simple interface to onboard new elliptic curves. Use this library for general purpose elliptic curve cryptography"
repository = "https://github.com/ZenGo-X/curv"

[lib]
crate-type = ["lib"]

[dependencies]
wasm-bindgen = "0.2.63"
blake2b_simd = "0.5.7"
cryptoxide = "0.1.2"
curve25519-dalek = { version = "=1.2.4", default-features = false, features = ["u64_backend"] }
derivative = "2.2"
digest = "0.8.1"
ff-zeroize = "0.6.3"
funty = "=1.1.0"
generic-array = "0.14"
hex = "0.4"
hmac = "0.7.1"
#merkle-sha3 = "^0.1"
lazy_static = "1.4.0"
num-traits = "0.2"
num-integer = "0.1"
pairing-plus = { git = "https://github.com/algorand/pairing-plus.git", version = "0.20.1" }
rand = "0.7.3"
ring-algorithm = { version = "0.4.0", default-features = false }
#rust-crypto = "^0.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
sha2 = "0.8.0"
sha3 = "0.8.2"
zeroize = {version = "=1.3.0"}
# for starknet-curve
starknet-crypto-codegen = "0.3.1"
starknet-ff = { version = "0.3.2", default-features = false }
starknet-curve = "0.3.0"

rust-gmp-kzen = { version = "0.5", features = ["serde_support"], optional = true }
num-bigint = { version = "0.4", features = ["serde"], optional = true }

#[patch.crates-io]
#zeroize = {version = "=1.3.0",tag = "zeroize/v1.3.0", git = "https://github.com/iqlusioninc/crates"}

[dependencies.libsecp256k1]
git  = "https://github.com/sgx-test/libsecp256k1-sgx"
branch = "0.3.5-sgx-struct"
#version = "0.20"
#features = ["serde", "rand-std"]

[dependencies.p256]
version = "0.5"
features = ["ecdsa"]

[dev-dependencies]
bincode = "1.1"
serde_json = "1.0"
paste = "1.0.2"
proptest = "0.10"
proptest-derive = "0.2"

[features]
default = ["gmp", "std"]
gmp = ["rust-gmp-kzen", "ring-algorithm/rug"]
big-num = ["num-bigint", "ring-algorithm/num-bigint"]
std = ["curve25519-dalek/std"]
wasm = ["big-num", "rand/wasm-bindgen"]